--- a/acceptsuiteservice/WebApp/WEB-INF/web.xml
+++ b/acceptsuiteservice/WebApp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
   <display-name>acceptsuiteservice</display-name>
   <security-constraint>
     <web-resource-collection>
-      <web-resource-name>acceptsuiteservice</web-resource-name>
+      <web-resource-name>acceptsuite-service</web-resource-name>
       <url-pattern>/*</url-pattern>
     </web-resource-collection>
     <user-data-constraint>
