--- a/acceptsuiteservice/pom.xml
+++ b/acceptsuiteservice/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>acceptsuiteservice</groupId>
-	<artifactId>acceptsuiteservice</artifactId>
+	<groupId>acceptsuite</groupId>
+	<artifactId>acceptsuite-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<dependencies>
@@ -77,6 +77,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+	    <finalName>${project.artifactId}</finalName>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
